Assignments/Lancer_Guo/src/y.output
Grammar

    0 $accept: programs $end

    1 programs: program

    2 program: program tCOMMENT
    3        | program if
    4        | program while
    5        | program dcl
    6        | program assign
    7        | program read
    8        | program print
    9        | %empty

   10 dcl: tVAR tIDENTIFIER tASSIGN exp tSEMICOLON
   11    | tVAR tIDENTIFIER tCOLON type tASSIGN exp tSEMICOLON

   12 type: tINT
   13     | tFLOAT
   14     | tSTRING
   15     | tBOOL

   16 if: tIF tLEFTPAREN exp tRIGHTPAREN tLEFTCURLY program tRIGHTCURLY else

   17 else: tELSE tLEFTCURLY program tRIGHTCURLY
   18     | tELSE if
   19     | %empty

   20 while: tWHILE tLEFTPAREN exp tRIGHTPAREN tLEFTCURLY program tRIGHTCURLY

   21 assign: tIDENTIFIER tASSIGN exp tSEMICOLON

   22 read: tREAD tLEFTPAREN tIDENTIFIER tRIGHTPAREN tSEMICOLON

   23 print: tPRINT tLEFTPAREN exp tRIGHTPAREN tSEMICOLON

   24 exp: exp tPLUS exp
   25    | exp tMINUS exp
   26    | exp tTIMES exp
   27    | exp tDIV exp
   28    | tNOT exp
   29    | tMINUS exp
   30    | tLEFTPAREN exp tRIGHTPAREN
   31    | exp tAND exp
   32    | exp tOR exp
   33    | exp tNOTEQUAL exp
   34    | exp tEQUAL exp
   35    | exp tGEQ exp
   36    | exp tLEQ exp
   37    | exp tGREATER exp
   38    | exp tSMALLER exp
   39    | tIDENTIFIER
   40    | tFLOATVAL
   41    | tINTVAL
   42    | tSTRINGVAL
   43    | tTRUE
   44    | tFALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
tIDENTIFIER (258) 10 11 21 22 39
tINTVAL (259) 41
tFLOATVAL (260) 40
tSTRINGVAL (261) 42
tTRUE (262) 43
tFALSE (263) 44
tVAR (264) 10 11
tINT (265) 12
tFLOAT (266) 13
tBOOL (267) 15
tSTRING (268) 14
tIF (269) 16
tELSE (270) 17 18
tWHILE (271) 20
tREAD (272) 22
tPRINT (273) 23
tCOLON (274) 11
tASSIGN (275) 10 11 21
tSEMICOLON (276) 10 11 21 22 23
tPLUS (277) 24
tMINUS (278) 25 29
tTIMES (279) 26
tDIV (280) 27
tEQUAL (281) 34
tNOTEQUAL (282) 33
tGEQ (283) 35
tLEQ (284) 36
tGREATER (285) 37
tSMALLER (286) 38
tAND (287) 31
tOR (288) 32
tNOT (289) 28
tLEFTPAREN (290) 16 20 22 23 30
tRIGHTPAREN (291) 16 20 22 23 30
tLEFTCURLY (292) 16 17 20
tRIGHTCURLY (293) 16 17 20
tUMINUS (294)
tCOMMENT (295) 2


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
programs (42)
    on left: 1, on right: 0
program (43)
    on left: 2 3 4 5 6 7 8 9, on right: 1 2 3 4 5 6 7 8 16 17 20
dcl (44)
    on left: 10 11, on right: 5
type (45)
    on left: 12 13 14 15, on right: 11
if (46)
    on left: 16, on right: 3 18
else (47)
    on left: 17 18 19, on right: 16
while (48)
    on left: 20, on right: 4
assign (49)
    on left: 21, on right: 6
read (50)
    on left: 22, on right: 7
print (51)
    on left: 23, on right: 8
exp (52)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44, on right: 10 11 16 20 21 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38


State 0

    0 $accept: . programs $end

    $default  reduce using rule 9 (program)

    programs  go to state 1
    program   go to state 2


State 1

    0 $accept: programs . $end

    $end  shift, and go to state 3


State 2

    1 programs: program .
    2 program: program . tCOMMENT
    3        | program . if
    4        | program . while
    5        | program . dcl
    6        | program . assign
    7        | program . read
    8        | program . print

    tIDENTIFIER  shift, and go to state 4
    tVAR         shift, and go to state 5
    tIF          shift, and go to state 6
    tWHILE       shift, and go to state 7
    tREAD        shift, and go to state 8
    tPRINT       shift, and go to state 9
    tCOMMENT     shift, and go to state 10

    $default  reduce using rule 1 (programs)

    dcl     go to state 11
    if      go to state 12
    while   go to state 13
    assign  go to state 14
    read    go to state 15
    print   go to state 16


State 3

    0 $accept: programs $end .

    $default  accept


State 4

   21 assign: tIDENTIFIER . tASSIGN exp tSEMICOLON

    tASSIGN  shift, and go to state 17


State 5

   10 dcl: tVAR . tIDENTIFIER tASSIGN exp tSEMICOLON
   11    | tVAR . tIDENTIFIER tCOLON type tASSIGN exp tSEMICOLON

    tIDENTIFIER  shift, and go to state 18


State 6

   16 if: tIF . tLEFTPAREN exp tRIGHTPAREN tLEFTCURLY program tRIGHTCURLY else

    tLEFTPAREN  shift, and go to state 19


State 7

   20 while: tWHILE . tLEFTPAREN exp tRIGHTPAREN tLEFTCURLY program tRIGHTCURLY

    tLEFTPAREN  shift, and go to state 20


State 8

   22 read: tREAD . tLEFTPAREN tIDENTIFIER tRIGHTPAREN tSEMICOLON

    tLEFTPAREN  shift, and go to state 21


State 9

   23 print: tPRINT . tLEFTPAREN exp tRIGHTPAREN tSEMICOLON

    tLEFTPAREN  shift, and go to state 22


State 10

    2 program: program tCOMMENT .

    $default  reduce using rule 2 (program)


State 11

    5 program: program dcl .

    $default  reduce using rule 5 (program)


State 12

    3 program: program if .

    $default  reduce using rule 3 (program)


State 13

    4 program: program while .

    $default  reduce using rule 4 (program)


State 14

    6 program: program assign .

    $default  reduce using rule 6 (program)


State 15

    7 program: program read .

    $default  reduce using rule 7 (program)


State 16

    8 program: program print .

    $default  reduce using rule 8 (program)


State 17

   21 assign: tIDENTIFIER tASSIGN . exp tSEMICOLON

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 32


State 18

   10 dcl: tVAR tIDENTIFIER . tASSIGN exp tSEMICOLON
   11    | tVAR tIDENTIFIER . tCOLON type tASSIGN exp tSEMICOLON

    tCOLON   shift, and go to state 33
    tASSIGN  shift, and go to state 34


State 19

   16 if: tIF tLEFTPAREN . exp tRIGHTPAREN tLEFTCURLY program tRIGHTCURLY else

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 35


State 20

   20 while: tWHILE tLEFTPAREN . exp tRIGHTPAREN tLEFTCURLY program tRIGHTCURLY

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 36


State 21

   22 read: tREAD tLEFTPAREN . tIDENTIFIER tRIGHTPAREN tSEMICOLON

    tIDENTIFIER  shift, and go to state 37


State 22

   23 print: tPRINT tLEFTPAREN . exp tRIGHTPAREN tSEMICOLON

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 38


State 23

   39 exp: tIDENTIFIER .

    $default  reduce using rule 39 (exp)


State 24

   41 exp: tINTVAL .

    $default  reduce using rule 41 (exp)


State 25

   40 exp: tFLOATVAL .

    $default  reduce using rule 40 (exp)


State 26

   42 exp: tSTRINGVAL .

    $default  reduce using rule 42 (exp)


State 27

   43 exp: tTRUE .

    $default  reduce using rule 43 (exp)


State 28

   44 exp: tFALSE .

    $default  reduce using rule 44 (exp)


State 29

   29 exp: tMINUS . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 39


State 30

   28 exp: tNOT . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 40


State 31

   30 exp: tLEFTPAREN . exp tRIGHTPAREN

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 41


State 32

   21 assign: tIDENTIFIER tASSIGN exp . tSEMICOLON
   24 exp: exp . tPLUS exp
   25    | exp . tMINUS exp
   26    | exp . tTIMES exp
   27    | exp . tDIV exp
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    tSEMICOLON  shift, and go to state 42
    tPLUS       shift, and go to state 43
    tMINUS      shift, and go to state 44
    tTIMES      shift, and go to state 45
    tDIV        shift, and go to state 46
    tEQUAL      shift, and go to state 47
    tNOTEQUAL   shift, and go to state 48
    tGEQ        shift, and go to state 49
    tLEQ        shift, and go to state 50
    tGREATER    shift, and go to state 51
    tSMALLER    shift, and go to state 52
    tAND        shift, and go to state 53
    tOR         shift, and go to state 54


State 33

   11 dcl: tVAR tIDENTIFIER tCOLON . type tASSIGN exp tSEMICOLON

    tINT     shift, and go to state 55
    tFLOAT   shift, and go to state 56
    tBOOL    shift, and go to state 57
    tSTRING  shift, and go to state 58

    type  go to state 59


State 34

   10 dcl: tVAR tIDENTIFIER tASSIGN . exp tSEMICOLON

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 60


State 35

   16 if: tIF tLEFTPAREN exp . tRIGHTPAREN tLEFTCURLY program tRIGHTCURLY else
   24 exp: exp . tPLUS exp
   25    | exp . tMINUS exp
   26    | exp . tTIMES exp
   27    | exp . tDIV exp
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    tPLUS        shift, and go to state 43
    tMINUS       shift, and go to state 44
    tTIMES       shift, and go to state 45
    tDIV         shift, and go to state 46
    tEQUAL       shift, and go to state 47
    tNOTEQUAL    shift, and go to state 48
    tGEQ         shift, and go to state 49
    tLEQ         shift, and go to state 50
    tGREATER     shift, and go to state 51
    tSMALLER     shift, and go to state 52
    tAND         shift, and go to state 53
    tOR          shift, and go to state 54
    tRIGHTPAREN  shift, and go to state 61


State 36

   20 while: tWHILE tLEFTPAREN exp . tRIGHTPAREN tLEFTCURLY program tRIGHTCURLY
   24 exp: exp . tPLUS exp
   25    | exp . tMINUS exp
   26    | exp . tTIMES exp
   27    | exp . tDIV exp
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    tPLUS        shift, and go to state 43
    tMINUS       shift, and go to state 44
    tTIMES       shift, and go to state 45
    tDIV         shift, and go to state 46
    tEQUAL       shift, and go to state 47
    tNOTEQUAL    shift, and go to state 48
    tGEQ         shift, and go to state 49
    tLEQ         shift, and go to state 50
    tGREATER     shift, and go to state 51
    tSMALLER     shift, and go to state 52
    tAND         shift, and go to state 53
    tOR          shift, and go to state 54
    tRIGHTPAREN  shift, and go to state 62


State 37

   22 read: tREAD tLEFTPAREN tIDENTIFIER . tRIGHTPAREN tSEMICOLON

    tRIGHTPAREN  shift, and go to state 63


State 38

   23 print: tPRINT tLEFTPAREN exp . tRIGHTPAREN tSEMICOLON
   24 exp: exp . tPLUS exp
   25    | exp . tMINUS exp
   26    | exp . tTIMES exp
   27    | exp . tDIV exp
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    tPLUS        shift, and go to state 43
    tMINUS       shift, and go to state 44
    tTIMES       shift, and go to state 45
    tDIV         shift, and go to state 46
    tEQUAL       shift, and go to state 47
    tNOTEQUAL    shift, and go to state 48
    tGEQ         shift, and go to state 49
    tLEQ         shift, and go to state 50
    tGREATER     shift, and go to state 51
    tSMALLER     shift, and go to state 52
    tAND         shift, and go to state 53
    tOR          shift, and go to state 54
    tRIGHTPAREN  shift, and go to state 64


State 39

   24 exp: exp . tPLUS exp
   25    | exp . tMINUS exp
   26    | exp . tTIMES exp
   27    | exp . tDIV exp
   29    | tMINUS exp .
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    $default  reduce using rule 29 (exp)


State 40

   24 exp: exp . tPLUS exp
   25    | exp . tMINUS exp
   26    | exp . tTIMES exp
   27    | exp . tDIV exp
   28    | tNOT exp .
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    $default  reduce using rule 28 (exp)


State 41

   24 exp: exp . tPLUS exp
   25    | exp . tMINUS exp
   26    | exp . tTIMES exp
   27    | exp . tDIV exp
   30    | tLEFTPAREN exp . tRIGHTPAREN
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    tPLUS        shift, and go to state 43
    tMINUS       shift, and go to state 44
    tTIMES       shift, and go to state 45
    tDIV         shift, and go to state 46
    tEQUAL       shift, and go to state 47
    tNOTEQUAL    shift, and go to state 48
    tGEQ         shift, and go to state 49
    tLEQ         shift, and go to state 50
    tGREATER     shift, and go to state 51
    tSMALLER     shift, and go to state 52
    tAND         shift, and go to state 53
    tOR          shift, and go to state 54
    tRIGHTPAREN  shift, and go to state 65


State 42

   21 assign: tIDENTIFIER tASSIGN exp tSEMICOLON .

    $default  reduce using rule 21 (assign)


State 43

   24 exp: exp tPLUS . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 66


State 44

   25 exp: exp tMINUS . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 67


State 45

   26 exp: exp tTIMES . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 68


State 46

   27 exp: exp tDIV . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 69


State 47

   34 exp: exp tEQUAL . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 70


State 48

   33 exp: exp tNOTEQUAL . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 71


State 49

   35 exp: exp tGEQ . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 72


State 50

   36 exp: exp tLEQ . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 73


State 51

   37 exp: exp tGREATER . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 74


State 52

   38 exp: exp tSMALLER . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 75


State 53

   31 exp: exp tAND . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 76


State 54

   32 exp: exp tOR . exp

    tIDENTIFIER  shift, and go to state 23
    tINTVAL      shift, and go to state 24
    tFLOATVAL    shift, and go to state 25
    tSTRINGVAL   shift, and go to state 26
    tTRUE        shift, and go to state 27
    tFALSE       shift, and go to state 28
    tMINUS       shift, and go to state 29
    tNOT         shift, and go to state 30
    tLEFTPAREN   shift, and go to state 31

    exp  go to state 77


State 55

   12 type: tINT .

    $default  reduce using rule 12 (type)


State 56

   13 type: tFLOAT .

    $default  reduce using rule 13 (type)


State 57

   15 type: tBOOL .

    $default  reduce using rule 15 (type)


State 58

   14 type: tSTRING .

    $default  reduce using rule 14 (type)


State 59

   11 dcl: tVAR tIDENTIFIER tCOLON type . tASSIGN exp tSEMICOLON

    tASSIGN  shift, and go to state 78


State 60

   10 dcl: tVAR tIDENTIFIER tASSIGN exp . tSEMICOLON
   24 exp: exp . tPLUS exp
   25    | exp . tMINUS exp
   26    | exp . tTIMES exp
   27    | exp . tDIV exp
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    tSEMICOLON  shift, and go to state 79
    tPLUS       shift, and go to state 43
    tMINUS      shift, and go to state 44
    tTIMES      shift, and go to state 45
    tDIV        shift, and go to state 46
    tEQUAL      shift, and go to state 47
    tNOTEQUAL   shift, and go to state 48
    tGEQ        shift, and go to state 49
    tLEQ        shift, and go to state 50
    tGREATER    shift, and go to state 51
    tSMALLER    shift, and go to state 52
    tAND        shift, and go to state 53
    tOR         shift, and go to state 54


State 61

   16 if: tIF tLEFTPAREN exp tRIGHTPAREN . tLEFTCURLY program tRIGHTCURLY else

    tLEFTCURLY  shift, and go to state 80


State 62

   20 while: tWHILE tLEFTPAREN exp tRIGHTPAREN . tLEFTCURLY program tRIGHTCURLY

    tLEFTCURLY  shift, and go to state 81


State 63

   22 read: tREAD tLEFTPAREN tIDENTIFIER tRIGHTPAREN . tSEMICOLON

    tSEMICOLON  shift, and go to state 82


State 64

   23 print: tPRINT tLEFTPAREN exp tRIGHTPAREN . tSEMICOLON

    tSEMICOLON  shift, and go to state 83


State 65

   30 exp: tLEFTPAREN exp tRIGHTPAREN .

    $default  reduce using rule 30 (exp)


State 66

   24 exp: exp . tPLUS exp
   24    | exp tPLUS exp .
   25    | exp . tMINUS exp
   26    | exp . tTIMES exp
   27    | exp . tDIV exp
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    tTIMES  shift, and go to state 45
    tDIV    shift, and go to state 46

    $default  reduce using rule 24 (exp)


State 67

   24 exp: exp . tPLUS exp
   25    | exp . tMINUS exp
   25    | exp tMINUS exp .
   26    | exp . tTIMES exp
   27    | exp . tDIV exp
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    tTIMES  shift, and go to state 45
    tDIV    shift, and go to state 46

    $default  reduce using rule 25 (exp)


State 68

   24 exp: exp . tPLUS exp
   25    | exp . tMINUS exp
   26    | exp . tTIMES exp
   26    | exp tTIMES exp .
   27    | exp . tDIV exp
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    $default  reduce using rule 26 (exp)


State 69

   24 exp: exp . tPLUS exp
   25    | exp . tMINUS exp
   26    | exp . tTIMES exp
   27    | exp . tDIV exp
   27    | exp tDIV exp .
   31    | exp . tAND exp
   32    | exp . tOR exp
   33    | exp . tNOTEQUAL exp
   34    | exp . tEQUAL exp
   35    | exp . tGEQ exp
   36    | exp . tLEQ exp
   37    | exp . tGREATER exp
   38    | exp . tSMALLER exp

    $default  reduce using rule 27 (exp)


State 70
